--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ body{
 }
 
 img{
+  
   width: 100%;
   position: absolute;
   top: 0;
@@ -25,11 +26,9 @@ img{
 }
 
 .mask{
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -42,7 +41,6 @@ img{
   align-items: center;
   width: 100%;
   height: 100vh;
-  max-width: 1300px;
 }
 
 .items{
@@ -62,3 +60,20 @@ h1{
   margin-bottom: -50px;
   /* text-shadow: 2px 2px #222222; */
 }
+@media (max-width: 1000px) , (max-height: 650px){
+  .container img{
+    position: fixed;
+    height: 100%;
+  }
+  
+  body{
+    font: 20px Bahnschrift, sans-serif;
+    font-weight: 400;
+  }
+  h1{
+    font: 90px Bahnschrift, sans-serif;
+    font-weight: 500;
+    margin-bottom: -30px;
+  }
+}
+
