--- a/css/styles.css
+++ b/css/styles.css
@@ -1,49 +1,84 @@
-body{
-  background: #333333;
-  background-image: url("../assets/clock.jpg");
-  background-repeat: no-repeat;
-  background-size: cover; 
-  
-  font: 30px Bahnschrift, sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  background: #cccccc;
+  font: 2rem Lexend, sans-serif;
   font-weight: 500;
   color: #d2dce6;
 }
-.mask{
+
+.mask {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  flex: 1;
   background: rgba(22, 22, 22, 0.5);
 }
-.container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.container {
+  max-width: 100%;
   width: 100%;
   height: 100vh;
-  max-width: 1300px;
+  background-image: url("../assets/clock.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  justify-content: center;
+  align-items: center;
 }
 
-.items{
-  display: flex;
-  flex-direction: column;
+.items {
+  max-width: 760px;
+  width: 100%;
+  position: relative;
+  margin: auto;
+  padding: 1rem;
   align-items: center;
   justify-content: center;
-  width: 80%;
-  height: 500px;
-  padding:15px;
-}
-h1{
   text-align: center;
-  font: 150px Bahnschrift, sans-serif;
-  font-weight: 700;
+  flex-direction: column;
+  border: 2px solid red;
+}
+
+h1 + p {
+  margin-top: 2rem;
+}
+
+h1 {
+  text-align: center;
+  font-family: Lexend, sans-serif;
+  font-size: 10rem;
+  font-weight: 600;
   color: #d2dce6;
-  
-  margin-bottom: -50px;
-  /* text-shadow: 2px 2px #222222; */
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+  h1 + p {
+    margin-top: 0.5rem;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+  body {
+    font-size: 1.5rem;
+  }
+  h1 {
+    font-size: 5rem;
+  }
+  h1 + p {
+    margin-top: 0.2rem;
+  }
+  .items {
+    width: 300px;
+  }
 }
